syntax = "proto3";

package powlibrary.api;

option go_package = "github.com/kl09/powlibrary/internal/api/v1";

service LibraryService {
  rpc GenerateTask(GenerateTaskRequest) returns (GenerateTaskResponse) {}
  rpc GetQuote(GetQuoteRequest) returns (GetQuoteResponse) {}
}

message GenerateTaskRequest {
  string user_id = 1; // In real life project user_id will be taken from user session.
}

message GenerateTaskResponse {
  string task = 1;
  int32 difficulty = 2;
}

message GetQuoteRequest {
  string task = 1;
  string hash = 2;
  string user_id = 3;
}

message GetQuoteResponse {
  string quote = 1;
}
